Fix scrollbars

--- a/_sass/_highlight.scss
+++ b/_sass/_highlight.scss
@@ -1,5 +1,5 @@
 // This highlight code is based off of @barryclark's Jekyll Now theme.
-.highlight {
+pre.highlight {
     overflow-x: scroll;
 }
 code.highlighter-rouge {
